fixed wrapping problem with :nth-child(4n)

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,6 +18,20 @@
   	float: right;
   }
 
+
+
+  /**********************************
+  PAGE: PORTFOLIO
+  ***********************************/
+
+  #gallery li {
+  	width: 28.3333%;
+  }
+
+  #gallery li:nth-child(4n) {
+  	clear: left;
+  }
+
 @media screen and (min-width: 660px) {
 
 }
